--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical"
     android:padding="16dp">
 
 
-    <TextView
-        android:id="@+id/textViewC300"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/c300" />
+        android:layout_height="match_parent"
+        android:layout_weight="2">
 
-    <TextView
-        android:id="@+id/textViewC322"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/c322" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textViewC346"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/c346" />
+            <TextView
+                android:id="@+id/textViewC300"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="2"
+                android:background="#7694FF"
+                android:text="@string/c300"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
 
-    <TextView
-        android:id="@+id/textViewC382"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/c382" />
+            <TextView
+                android:id="@+id/textViewC322"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="2"
+                android:background="#FF4141"
+                android:text="@string/c322"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+
+            <TextView
+                android:id="@+id/textViewC346"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="2"
+                android:background="#C4FF80"
+                android:text="@string/c346"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+
+            <TextView
+                android:id="@+id/textViewC382"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="2"
+                android:background="#FFA7A7"
+                android:text="@string/c382"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
