--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,61 +2,84 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:background="#6A5353"
+    android:orientation="vertical">
 
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2">
+        android:layout_weight="1"
+        android:background="#581845"
+        android:orientation="horizontal"
+        android:padding="5dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/textViewC300"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:background="#7694FF"
+            android:gravity="center"
+            android:text="@string/c300"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/textViewC300"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="2"
-                android:background="#7694FF"
-                android:text="@string/c300"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="#6FBD17"
+        android:orientation="horizontal"
+        android:padding="5dp">
 
-            <TextView
-                android:id="@+id/textViewC322"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="2"
-                android:background="#FF4141"
-                android:text="@string/c322"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+        <TextView
+            android:id="@+id/textViewC346"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:background="#BDE69A"
+            android:gravity="center"
+            android:text="@string/c346"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/textViewC346"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="2"
-                android:background="#C4FF80"
-                android:text="@string/c346"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="#D63333"
+        android:padding="5dp"
+    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textViewC382"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="2"
-                android:background="#FFA7A7"
-                android:text="@string/c382"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
-        </LinearLayout>
-    </ScrollView>
+        <TextView
+            android:id="@+id/textViewC322"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:background="#D89494"
+            android:gravity="center"
+            android:text="@string/c322"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="#344B8F"
+        android:padding="5dp"
+    android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textViewC382"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:background="#C36F6F"
+            android:gravity="center"
+            android:text="@string/c382"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+    </LinearLayout>
 
 </LinearLayout>
