--- a/app/src/main/res/layout/activity_module_detail.xml
+++ b/app/src/main/res/layout/activity_module_detail.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="#FAAEAE"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -10,24 +11,24 @@
         android:id="@+id/textViewModuleCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Module Code:"
         android:padding="10dp"
+        android:text="Module Code:"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
         android:id="@+id/textViewModuleName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Module Name:"
         android:padding="10dp"
+        android:text="Module Name:"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
         android:id="@+id/textViewAcadYear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Academic Year:"
         android:padding="10dp"
+        android:text="Academic Year:"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     />
 
@@ -35,8 +36,8 @@
         android:id="@+id/textViewSemester"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Semester:"
         android:padding="10dp"
+        android:text="Semester:"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     />
 
@@ -44,8 +45,8 @@
         android:id="@+id/textViewModuleCreds"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Module Credits:"
         android:padding="10dp"
+        android:text="Module Credits:"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     />
 
@@ -53,8 +54,8 @@
         android:id="@+id/textViewVenue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Venue:"
         android:padding="10dp"
+        android:text="Venue:"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     />
 
@@ -62,7 +63,7 @@
         android:id="@+id/buttonReturn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="225dp"
+        android:layout_marginTop="265dp"
         android:text="@string/goBack" />
 
 
